[package]
name = "tr069-acs"
version = "0.1.0"
authors = ["TueTran2008 <tuetd174343@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
#Axum is optional because we use it on server only
axum = { version = "0.7.0", optional = true}
tokio = { version = "1.47.1", features = ["full"], optional = true}
tracing = {version = "0.1.41"}

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum" , "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
