[package]
name = "tr069-acs"
version = "0.1.0"
authors = ["TueTran2008 <tuetd174343@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
#Axum is optional because we use it on server only
axum = { version = "0.7.0", optional = true}
tokio = { version = "1.47.1", features = ["full"], optional = true}
# tracing = {version = "0.1.41"}
#For encode/decode TR069 message
quick-xml = {version = "0.38.3" , features = ["serialize"]}
tracing = { version = "0.1.41", feature = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3.20" , features = ["registry", "env-filter"]}
tracing-log = "0.2.0"
serde = { version = "1.0.228", features = ["derive"]}
http-body-util = "0.1.3"

[dev-dependencies]
reqwest = "0.12.13"

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum" , "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
